--- a/src/InsuranceApi.Application/InsuranceApi.Application.csproj
+++ b/src/InsuranceApi.Application/InsuranceApi.Application.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <ProjectReference Include="..\InsuranceApi.Core\InsuranceApi.Core.csproj" />
     <ProjectReference Include="..\InsuranceApi.Infra.Data\InsuranceApi.Infra.Data.csproj" />
+    <ProjectReference Include="..\InsuranceApi.Service.Client\InsuranceApi.Service.Client.csproj" />
   </ItemGroup>
 
 </Project>
