--- a/src/InsuranceApi/appsettings.Development.json
+++ b/src/InsuranceApi/appsettings.Development.json
@@ -27,6 +27,18 @@
       {
         "Name": "GuaranteeMockApi",
         "Url": "https://localhost:7262"
+      },
+      {
+        "Name": "Authentication",
+        "Url": "https://localhost:7221/api"
+      },
+      {
+        "Name": "Calculation",
+        "Url": "https://localhost:7221/api"
+      },
+      {
+        "Name": "Product",
+        "Url": "https://localhost:7221/api"
       }
     ]
   },
