--- a/src/InsuranceApi.Core/InsuranceApi.Core.csproj
+++ b/src/InsuranceApi.Core/InsuranceApi.Core.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="14.0.0" />
     <PackageReference Include="Component.Log" Version="1.0.35" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
