--- a/src/InsuranceApi/appsettings.Development.json
+++ b/src/InsuranceApi/appsettings.Development.json
@@ -25,7 +25,7 @@
         "Url": "https://viacep.com.br"
       },
       {
-        "Name": "GuaranteeMockApi",
+        "Name": "InsuranceApiMockApi",
         "Url": "https://localhost:7262"
       },
       {
