--- a/src/InsuranceApi/appsettings.Production.json
+++ b/src/InsuranceApi/appsettings.Production.json
@@ -8,8 +8,8 @@
   },
   "AllowedHosts": "*",
   "ApiConfig": {
-    "ApplicationName": "insurance.api",
-    "Environment": "Develop",
+    "ApplicationName": "api-insurance",
+    "Environment": "Production",
     "DisplayFullErrorStack": true,
     "UseResponseCompression": false,
     "Jwt": {
@@ -26,11 +26,11 @@
       },
       {
         "Name": "InsuranceApiMockApi",
-        "Url": "http://localhost:5012"
+        "Url": "http://192.168.0.120:5008"
       },
       {
         "Name": "Authentication",
-        "Url": "https://localhost:7221/api"
+        "Url": "http://192.168.0.120:5001/api"
       },
       {
         "Name": "Calculation",
@@ -38,7 +38,7 @@
       },
       {
         "Name": "Product",
-        "Url": "https://localhost:7221/api"
+        "Url": "http://192.168.0.120:5005/api"
       }
     ]
   },
@@ -67,7 +67,7 @@
     }
   },
   "ExecuteTimeoutInMilliseconds": 100000,
-  "ConnectionStrings": {
-    "DefaultConnection": "Data SOURCE=192.168.0.120,1433; INITIAL Catalog=Insurance;User ID=sa;Password=L11e5@01;Persist Security Info=False;TrustServerCertificate=true"
+  "ConnectionStrings": {    
+    "DefaultConnection": "Server=192.168.0.120,1433;Database=Insurance;User ID=sa;Password=L11e5@01;TrustServerCertificate=True;"
   }
 }
