Cadastro de produto

--- a/src/InsuranceApi/appsettings.Development.json
+++ b/src/InsuranceApi/appsettings.Development.json
@@ -30,7 +30,7 @@
       },
       {
         "Name": "Authentication",
-        "Url": "https://localhost:7221/api"
+        "Url": "http://192.168.0.120:5001/api"
       },
       {
         "Name": "Calculation",
@@ -38,7 +38,7 @@
       },
       {
         "Name": "Product",
-        "Url": "https://localhost:7221/api"
+        "Url": "http://localhost:5236/api"
       }
     ]
   },
