--- a/src/InsuranceApi/appsettings.Production.json
+++ b/src/InsuranceApi/appsettings.Production.json
@@ -26,11 +26,11 @@
       },
       {
         "Name": "InsuranceApiMockApi",
-        "Url": "http://192.168.0.120:5008"
+        "Url": "http://dionisiorafael-001-site4.atempurl.com"
       },
       {
         "Name": "Authentication",
-        "Url": "http://192.168.0.120:5001/api"
+        "Url": "http://dionisiorafael-001-site3.atempurl.com/api"
       },
       {
         "Name": "Calculation",
@@ -38,8 +38,8 @@
       },
       {
         "Name": "Product",
-       // "Url": "http://192.168.0.120:5005/api"
-        "Url": "http://localhost:5236/api"       
+        "Url": "http://dionisiorafael-001-site1.atempurl.com/api"
+        
       }
     ]
   },
@@ -68,7 +68,7 @@
     }
   },
   "ExecuteTimeoutInMilliseconds": 100000,
-  "ConnectionStrings": {    
-    "DefaultConnection": "Server=192.168.0.120,1433;Database=Insurance;User ID=sa;Password=L11e5@01;TrustServerCertificate=True;"
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=SQL1004.site4now.net;Initial Catalog=db_abaa3e_issue;User Id=db_abaa3e_issue_admin;Password=L11e5@01"
   }
 }
