--- a/src/InsuranceApi/Properties/launchSettings.json
+++ b/src/InsuranceApi/Properties/launchSettings.json
@@ -5,7 +5,7 @@
       "launchBrowser": true,
       "launchUrl": "api/swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Production"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:5029"
