--- a/src/InsuranceApi/appsettings.Production.json
+++ b/src/InsuranceApi/appsettings.Production.json
@@ -38,8 +38,8 @@
       },
       {
         "Name": "Product",
-        //"Url": "http://dionisiorafael-001-site1.atempurl.com/api",
-        "Url": "http://localhost:5236/api"
+        "Url": "http://dionisiorafael-001-site1.atempurl.com/api"
+        //"Url": "http://localhost:5236/api"
 
       }
     ]
